--- a/desafio-tabuada/estilo/style.css
+++ b/desafio-tabuada/estilo/style.css
@@ -50,6 +50,13 @@ h1{
     border-radius: 10px;
     border: 0px;
 }
+footer{
+    color: white;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
 
 /* RESPONSIVIDADE */
 
