--- a/12_Produto/style.css
+++ b/12_Produto/style.css
@@ -6,7 +6,7 @@
 header{
     background-color: #303030;
     padding: 5px;
-    color: antiquewhite;
+    color: #ccc;
     display: grid;
     text-align: center;
 }
@@ -65,3 +65,52 @@ table th{
 table td{
     padding: 1px;
 }
+
+table td img{
+    width: 25px;
+}
+
+footer{
+    display: block;
+    margin-top: 75px;
+    color: #ccc;
+    background-color: #303030;
+    padding-top: 5px ;
+    text-align: center;
+    margin-top: 20px;
+
+}
+
+footer a{
+    text-decoration: none;
+    color: #ccc;
+}
+footer a:hover{
+    text-decoration: underline;
+    font-weight: bold;
+    transition: all ease 0.3s;
+}
+
+@media screen and (max-width: 800px){
+    header {
+        height: 120px;
+    }
+    header img {
+        width: 80px;
+    }
+
+    .card{
+        width: 80%;
+    }
+
+    .conteudo{
+        width: 88%;
+    }
+
+    footer{
+        margin-top: 20px;
+    }
+
+}
+
+
